<resources>
    <string name="app_name">JuanCastrejonExamen</string>
    <string name="hint_user">Ingrese correo</string>
    <string name="hint_pass">Ingrese su contraseña</string>
    <string name="button_ok">Aceptar</string>
    <string name="txt_new_user">Crear cuenta</string>
    <string name="txt_home">Home</string>
    <string name="txt_login">LogIn</string>
    <string name="txt_register">Registro</string>
    <string name="hint_phone">Ingrese su número celular</string>
    <string name="txt_new_poll">Crear encuesta</string>
    <string name="txt_exit">Salir</string>
    <string name="txt_survey">Mi encuesta</string>
    <string name="txt_Pastel">Pastel</string>
    <string name="txt_Barras">Barras</string>
    <string name="txt_Puntos">Puntos</string>
    <string name="txt_inventarios">Inventarios</string>
    <string name="txt_ordenes">Ordenes de Compra</string>
    <string name="txt_pedidos">Pedidos de Venta</string>
    <string name="hint_pollname">Nombre de la encuesta</string>
    <string name="hint_name">Nombre del encuestado</string>
    <string name="hint_lastname">Apellido(s) del encuestado</string>
    <string name="txt_detail">Detalle</string>
    <string name="txt_edit">Editar encuesta</string>
    <string name="txt_see_poll">Ver lista</string>
    <string name="txt_recycler">Recycler View</string>
    <string name="txt_graffic">¿que tipo de grafica le es mas facil de entender?</string>
    <string name="txt_interests">¿que apartado le interesa mas?</string>
    <string name="txt_comments">Comentarios extra</string>
    <string name="txt_usertype">¿que puesto tiene dentro de la empresa?</string>
    <string name="todo">TODO</string>
    <string name="hint_date">Click para elegir la fecha</string>
    <string name="hint_time">Click para elegir la hora</string>
    <string name="txt_see_db">Lista BD</string>
</resources>